[#131434457] Response Set Import now makes sure that there is at least one '1' for the choice_ columns rather than what it was doing before, which was making sure there were none. Also checks that choice_ columns are all '1' or '0' or blank, and that sliders are between 1.0 and -1.0. No more fatal error when there are no validation errors.

--- a/app/views/profile_sets/imports/_form.html.haml
+++ b/app/views/profile_sets/imports/_form.html.haml
@@ -20,7 +20,7 @@
   .form-inputs
     = f.input :records_file, as: :file
 
-  - if @profile_set_import.row_errors.any?
+  - if @profile_set_import.try(:row_errors).try(:any?)
     .form-group.has-error
       %span.help-block
         %ul
