--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -24,8 +24,8 @@
         = f.input :wrapt_sku, label: 'Wrapt SKU'
         = f.input :vendor_sku, label: 'Vendor SKU'
 
-    %h3 Categories
-    = f.association :product_categories, as: :check_boxes, collection: ProductCategory.all_for_product_form, label_method: :name_for_product_form
+    %h3 Category
+    = f.association :product_category, as: :select, collection: ProductCategory.all_for_product_form, label_method: :name_for_product_form
 
     .row
       .col-sm-12
