subcategories for gifts and products

--- a/app/views/gifts/show.html.haml
+++ b/app/views/gifts/show.html.haml
@@ -6,6 +6,7 @@
 
     %p
       %span.label.label-default= @gift.product_category&.name
+      %span.label.label-default= @gift.product_subcategory&.name
 
     %p
       %b Title:
