--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@product) do |f|
+= simple_form_for(@product, html: {data: {behavior: 'form-loads-subcategories'}}) do |f|
   = f.error_notification
 
   .form-inputs
@@ -25,7 +25,8 @@
         = f.input :vendor_sku, label: 'Vendor SKU'
 
     %h3 Category
-    = f.association :product_category, as: :select, collection: ProductCategory.all_for_product_form, label_method: :name_for_product_form
+    = f.association :product_category, as: :select, collection: ProductCategory.top_level, input_html: {data: {behavior: 'product-category-input'}}
+    = f.association :product_subcategory, as: :select, collection: (@product.product_category&.children || []), input_html: {data: {behavior: 'product-subcategory-input'}}
 
     .row
       .col-sm-12
@@ -33,3 +34,6 @@
 
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
+
+:javascript
+  new App.Admin.ProductSubcategoryLoader()
