--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -37,6 +37,7 @@
 
     %p
       %span.label.label-default= @product.product_category&.name
+      %span.label.label-default= @product.product_subcategory&.name
 
     %p
       %b Notes:
