--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -21,7 +21,7 @@
         = f.input :units_available,label: 'Units Available'
     .row
       .col-xs-4
-        = f.input :wrapt_sku, label: 'Wrapt SKU'
+        = f.input :wrapt_sku, label: 'Wrapt SKU', disabled: true
         = f.input :vendor_sku, label: 'Vendor SKU'
 
     %h3 Category
