--- a/app/views/gifts/_form.html.haml
+++ b/app/views/gifts/_form.html.haml
@@ -17,7 +17,7 @@
         %h3 Category
         = f.association :product_category, as: :select, collection: ProductCategory.top_level, input_html: {data: {behavior: 'product-category-input'}}
         = f.association :product_subcategory, as: :select, collection: (@gift.product_category&.children || []), input_html: {data: {behavior: 'product-subcategory-input'}}
-        = f.input :wrapt_sku, label: 'Wrapt SKU'
+        = f.input :wrapt_sku, label: 'Wrapt SKU', disabled: true
     = f.input :date_available, html5: true, label: 'Date Available'
     = f.input :date_discontinued, html5: true, label: 'Date Discontinued'
 
