no dependent destroy, fix [#131759623]

--- a/app/views/product_categories/index.html.haml
+++ b/app/views/product_categories/index.html.haml
@@ -18,6 +18,6 @@
             %ul.admin-index-list
               - product_category.children.each do |subcategory|
                 %li
-                  = "#{product_category.name} (#{product_category.wrapt_sku_code})"
+                  = "#{subcategory.name} (#{subcategory.wrapt_sku_code})"
                   = link_to 'Edit', edit_product_category_path(subcategory), class: 'btn btn-default btn-xs'
                   = link_to 'Delete', product_category_path(subcategory), method: :delete, confirm: 'Are you sure?', class: 'btn btn-danger btn-xs'
