add category info to gifts / products

--- a/app/views/gifts/index.html.haml
+++ b/app/views/gifts/index.html.haml
@@ -6,29 +6,39 @@
   .col-sm-12
     = link_to 'Add a Gift', new_gift_path, class: 'btn btn-primary'
 
-%table.table
-  %thead
-    %tr
-      %th
-      %th Title
-      %th Description
-      %th Wrapt SKU
-      %th Selling price
-      %th Availability
-      %th
+.row
+  .col-sm-12
+    %table.table
+      %thead
+        %tr
+          %th
+          %th Title
+          %th Description
+          %th Wrapt SKU
+          %th Categories
+          %th Selling price
+          %th Availability
+          %th
 
-  %tbody
-    - @gifts.each do |gift|
-      %tr
-        %td.admin-index-table--image-cell
-          - if gift.primary_gift_image.present?
-            = image_tag gift.primary_gift_image.image_url(:small), class: 'admin-index-table--image'
-        %td= gift.title
-        %td= gift.description
-        %td= gift.wrapt_sku
-        %td= number_to_currency gift.selling_price
-        %td= gift.availability_string
-        %td
-          = link_to 'View', gift, class: 'btn btn-default btn-xs'
-          = link_to 'Edit', edit_gift_path(gift), class: 'btn btn-default btn-xs'
-          = link_to 'Delete', gift, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
+      %tbody
+        - @gifts.each do |gift|
+          %tr
+            %td.admin-index-table--image-cell
+              - if gift.primary_gift_image.present?
+                = image_tag gift.primary_gift_image.image_url(:small), class: 'admin-index-table--image'
+            %td= gift.title
+            %td= gift.description
+            %td= gift.wrapt_sku
+            %td
+              - if gift.product_category.present?
+                %span.label.label-default= gift.product_category&.name
+              - if gift.product_subcategory.present?
+                %span.label.label-default= gift.product_subcategory&.name
+            %td= number_to_currency gift.selling_price
+            %td= gift.availability_string
+            %td
+              = link_to 'View', gift, class: 'btn btn-default btn-xs'
+              = link_to 'Edit', edit_gift_path(gift), class: 'btn btn-default btn-xs'
+              = link_to 'Delete', gift, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
+
+    %p= paginate @gifts
