--- a/app/views/gifts/show.html.haml
+++ b/app/views/gifts/show.html.haml
@@ -30,6 +30,25 @@
       %b Date discontinued:
       = @gift.display_date_discontinued
 
+    %h3 Products
+    %table.table
+      %thead
+        %tr
+          %th
+          %th Title
+          %th SKU
+          %th Price
+      %tbody
+        - @gift.products.each do |product|
+          %tr
+            %td
+              - if product.primary_product_image&.image?
+                = image_tag product.primary_product_image.image_url(:small), class: "admin-index-table--image"
+            %td= link_to product.title, product
+            %td= product.wrapt_sku
+            %td= product.price
+
+    %h3 Images
     - @gift.gift_images.each do |gift_image|
       %p
         = image_tag gift_image.image_url(:small)
