--- a/app/assets/stylesheets/modules/admin/_lists_tables.scss
+++ b/app/assets/stylesheets/modules/admin/_lists_tables.scss
@@ -39,3 +39,10 @@
 .admin-index-table--image {
   max-height: 100px;
 }
+.admin-index-table--buttons-cell {
+  min-width: 170px;
+  text-align: center;
+}
+.admin-index-table--sku-cell {
+  min-width: 160px;
+}
