--- a/app/views/product_categories/_form.html.haml
+++ b/app/views/product_categories/_form.html.haml
@@ -7,4 +7,4 @@
     = f.input :wrapt_sku_code, label: 'SKU Code (3 uppercase letters)'
 
   .form-actions
-    = f.button :submit, 'Update Product Category', class: 'btn btn-primary'
+    = f.button :submit, 'Save Product Category', class: 'btn btn-primary'
