--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -11,13 +11,13 @@
       .col-xs-3
         = f.input :price, wrapper: :vertical_input_group do
           .input-group-addon $
-          = f.input_field :price, class: 'form-control'
+          = f.input_field :price, class: 'form-control', value: number_with_precision(f.object.price, precision: 2)
         = f.input :vendor_retail_price, label: 'Vendor Retail Price', wrapper: :vertical_input_group do
           .input-group-addon $
-          = f.input_field :vendor_retail_price, class: 'form-control'
+          = f.input_field :vendor_retail_price, class: 'form-control', value: number_with_precision(f.object.vendor_retail_price, precision: 2)
         = f.input :wrapt_cost, label: 'Wrapt Cost', wrapper: :vertical_input_group do
           .input-group-addon $
-          = f.input_field :wrapt_cost, class: 'form-control'
+          = f.input_field :wrapt_cost, class: 'form-control', value: number_with_precision(f.object.wrapt_cost, precision: 2)
         = f.input :units_available,label: 'Units Available'
     .row
       .col-xs-4
