--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -27,11 +27,11 @@
               - if product.primary_product_image.present?
                 = image_tag product.primary_product_image.image_url(:small), class: 'admin-index-table--image'
             %td= product.title
-            %td= product.wrapt_sku
-            %td= number_to_currency product.wrapt_cost
-            %td= number_to_currency product.vendor_retail_price
-            %td= number_with_delimiter product.units_available
-            %td
+            %td.admin-index-table--sku-cell= product.wrapt_sku
+            %td.text-right= number_to_currency product.wrapt_cost
+            %td.text-right= number_to_currency product.vendor_retail_price
+            %td.text-right= number_with_delimiter product.units_available
+            %td.admin-index-table--buttons-cell
               = link_to 'View', product, class: 'btn btn-default btn-xs'
               = link_to 'Edit', edit_product_path(product), class: 'btn btn-default btn-xs'
               = link_to 'Delete', product, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
