--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -14,9 +14,9 @@
           %th
           %th Title
           %th Wrapt SKU
-          %th Wrapt Cost
-          %th Vendor Retail Price
-          %th Units Available
+          %th.text-right Wrapt Cost
+          %th.text-right Vendor Retail Price
+          %th.text-right Units Available
           %th
 
 
