--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -7,6 +7,7 @@
 .row.admin__actions
   .col-sm-12
     = link_to "Add New Question", new_survey_question_path(@survey), class: 'btn btn-primary'
+    = link_to 'Create a Copy of this Survey', survey_copying_path(@survey), class: 'btn btn-primary', data: {method: 'post'}
 
 .row
   .col-sm-12
