run as delayed_job

--- a/app/views/surveys/index.html.haml
+++ b/app/views/surveys/index.html.haml
@@ -13,4 +13,4 @@
         - @surveys.each do |survey|
           %tr
             %td
-              = link_to survey.title, survey
+              = render survey
