--- a/app/views/surveys/index.html.haml
+++ b/app/views/surveys/index.html.haml
@@ -14,3 +14,9 @@
           %tr
             %td
               = render survey
+
+- content_for :page_js do
+  :javascript
+    if ($('[data-behavior~=survey-copy-in-progress]').length > 0) {
+      new App.Admin.SurveyCopyingsChannel()
+    }
