--- a/app/views/gift_products/index.haml
+++ b/app/views/gift_products/index.haml
@@ -40,12 +40,11 @@
     %h3 Add Products to this Gift
     %form.form-inline(method="GET")
       .form-group
-        %input{type: 'hidden', name: 'page', value: params[:page]}
         %input.form-control{type: 'search', name: 'q', value: params[:q], placeholder: 'Title or SKU', style: 'min-width: 300px;'}
         %button.btn.btn-primary
           %i.glyphicon.glyphicon-search
           Search
-        = link_to 'Show All', gift_products_path(@gift, context_params.merge(q: nil)), class: 'btn btn-default'
+        = link_to 'Show All', gift_products_path(@gift), class: 'btn btn-default'
 
     - if @available_products.empty?
       %p(style="margin-top: 10px;")
