--- a/app/views/gifts/_form.html.haml
+++ b/app/views/gifts/_form.html.haml
@@ -15,7 +15,7 @@
           = f.input_field :cost, class: 'form-control', disabled: @gift.calculate_cost_from_products?, value: number_with_precision(f.object.cost, precision: 2)
         = f.input :calculate_cost_from_products, label: 'Auto-Calculate Cost from Products'
         %h3 Category
-        = f.association :product_category, as: :select, collection: ProductCategory.top_level, input_html: {data: {behavior: 'product-category-input'}}
+        = f.association :product_category, as: :select, collection: ProductCategory.categories, input_html: {data: {behavior: 'product-category-input'}}
         = f.association :product_subcategory, as: :select, collection: (@gift.product_category&.children || []), input_html: {data: {behavior: 'product-subcategory-input'}}
         = f.input :wrapt_sku, label: 'Wrapt SKU', disabled: true
     = f.input :date_available, html5: true, label: 'Date Available'
