--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -8,6 +8,18 @@
 
 .row
   .col-sm-12
+    = form_for @product_search, url: products_path, html: {method: 'GET', class: 'form-inline'} do |form|
+      .form-group
+        = form.search_field :keyword, placeholder: 'Title or SKU', class: 'form-control', style: 'min-width: 300px;'
+        = form.collection_select :product_category_id, ProductCategory.categories, :id, :name, {prompt: 'Category'}, class: 'form-control'
+        = form.collection_select :product_subcategory_id, ProductCategory.subcategories, :id, :name, {prompt: 'Subcategory'}, class: 'form-control'
+        %button.btn.btn-primary
+          %i.glyphicon.glyphicon-search
+          Search
+        = link_to 'Show All', products_path, class: 'btn btn-default'
+
+.row
+  .col-sm-12
     %table.table.index-table
       %thead
         %tr
@@ -40,7 +52,7 @@
             %td.admin-index-table--buttons-cell
               = link_to 'View', product, class: 'btn btn-default btn-xs'
               = link_to 'Edit', edit_product_path(product), class: 'btn btn-default btn-xs'
-              = link_to 'Delete', product, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
+              = link_to 'Delete', product_path(product, context_params), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
 
     %p=paginate @products
 
