--- a/app/views/product_subcategories/show.html.haml
+++ b/app/views/product_subcategories/show.html.haml
@@ -1,3 +1,3 @@
-%option{value: ""}
+%option{value: ""}= params[:prompt]
 - @product_category.children.each do |subcategory|
   %option{value: subcategory.id}= subcategory.name
