--- a/app/views/gifts/index.html.haml
+++ b/app/views/gifts/index.html.haml
@@ -6,6 +6,17 @@
   .col-sm-12
     = link_to 'Add a Gift', new_gift_path, class: 'btn btn-primary'
 
+.row
+  .col-sm-12
+    = form_for @gift_search, url: gifts_path, html: {method: 'GET', class: 'form-inline', data: {behavior: 'form-loads-subcategories'}} do |form|
+      .form-group
+        = form.search_field :keyword, placeholder: 'Title or SKU', class: 'form-control', style: 'min-width: 300px;'
+        = form.collection_select :product_category_id, ProductCategory.categories, :id, :name, {prompt: 'Category'}, class: 'form-control', data: {behavior: 'product-category-input'}
+        = form.collection_select :product_subcategory_id, ProductCategory.subcategories.where(parent_id: @gift_search.product_category_id), :id, :name, {prompt: 'Sub-category'}, class: 'form-control', data: {behavior: 'product-subcategory-input'}
+        %button.btn.btn-primary
+          %i.glyphicon.glyphicon-search
+          Search
+        = link_to 'Show All', gifts_path, class: 'btn btn-default'
 
 .row
   .col-sm-12
@@ -40,5 +51,10 @@
             %td.admin-index-table--buttons-cell
               = link_to 'View', gift, class: 'btn btn-default btn-xs'
               = link_to 'Edit', edit_gift_path(gift), class: 'btn btn-default btn-xs'
-              = link_to 'Delete', gift, :method => :delete, :data => { :confirm => 'Are you sure you want to delete this gift?' }, class: 'btn btn-danger btn-xs'
+              = link_to 'Delete', gift_path(gift, context_params), :method => :delete, :data => { :confirm => 'Are you sure you want to delete this gift?' }, class: 'btn btn-danger btn-xs'
+    
     %p= paginate @gifts
+
+- content_for :page_js do
+  :javascript
+    new App.Admin.ProductSubcategoryLoader({prompt: 'Sub-category'})
