--- a/app/views/survey_questions/edit.haml
+++ b/app/views/survey_questions/edit.haml
@@ -12,7 +12,9 @@
         = form.input :code, hint: '(required for importing)'
         = render form_fields_partial(@survey_question), form: form
         = form.input :conditional_display, as: :boolean, label: 'Display this question conditionally', input_html: {data: {behavior: 'toggle-conditional-question-fields'}}
-        %p(data-behavior="conditional-question-fields" style="display: none;") FORM FOR CONDITIONAL QUESTIONS GOES HERE
+        %div(data-behavior="conditional-question-fields" style="display: none;")
+          = form.association :conditional_question, label: 'Show this question if the answer to:', prompt: 'Select question', collection: @survey.multiple_choice_questions, label_method: 'prompt', input_html: {data: {behavior: 'conditional-question-id-input'}}
+          %div{data: {behavior: "conditional-question-options-container", conditional_question_options_url_base: "/surveys/#{@survey.id}/questions/#{@survey_question.id}/conditional_question_options"}}
 
       .form-actions
         = form.submit 'Save', class: 'btn btn-primary'
