conditional question display [#128858717]

--- a/app/views/profile_set_survey_responses/_form.html.haml
+++ b/app/views/profile_set_survey_responses/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@profile_set_survey_response, url: url) do |f|
+= simple_form_for(@profile_set_survey_response, url: url, html: {data: {behavior: 'conditional-question-display-form'}}) do |f|
   = f.error_notification
 
   .form-inputs
@@ -6,7 +6,8 @@
       = f.input :name, label: 'Name for this response'
 
     = f.simple_fields_for :question_responses do |question_response_fields|
-      .admin-quiz-question.mb5
+      - question = question_response_fields.object.survey_question
+      .admin-quiz-question.mb5{data: {behavior: 'survey_question', question_id: question.id, conditional_display: ('true' if question.conditional_display), conditional_question_id: question.conditional_question_id, conditional_question_option_ids: question.conditional_question_options.map(&:survey_question_option_id).to_json}}
         %h4.admin-quiz-question__label #{question_response_fields.index + 1}. #{question_response_fields.object.survey_question.prompt_with_name(@profile_set_survey_response)}
         = question_response_fields.input :survey_question_id, as: :hidden
         = render question_response_fields_partial(question_response_fields.object), question_response_fields: question_response_fields
@@ -14,3 +15,7 @@
 
   .form-actions
     = f.button :submit, "Save", class: 'btn btn-primary'
+
+- content_for :page_js do
+  :javascript
+    new App.Admin.ConditionalQuestionDisplay.Controller()
