--- a/app/views/gifts/show.html.haml
+++ b/app/views/gifts/show.html.haml
@@ -31,24 +31,34 @@
       = @gift.display_date_discontinued
 
     %h3 Products
-    %table.table
-      %thead
-        %tr
-          %th
-          %th Title
-          %th SKU
-          %th Price
-      %tbody
-        - @gift.products.each do |product|
+    - if @gift.products.none?
+      %p
+        No products yet.
+        = link_to 'Add some', gift_products_path(@gift)
+    - else
+      %table.table
+        %thead
           %tr
-            %td
-              - if product.primary_product_image&.image?
-                = image_tag product.primary_product_image.image_url(:small), class: "admin-index-table--image"
-            %td= link_to product.title, product
-            %td= product.wrapt_sku
-            %td= product.price
+            %th
+            %th Title
+            %th SKU
+            %th Price
+        %tbody
+          - @gift.products.each do |product|
+            %tr
+              %td
+                - if product.primary_product_image&.image?
+                  = image_tag product.primary_product_image.image_url(:small), class: "admin-index-table--image"
+              %td= link_to product.title, product
+              %td= product.wrapt_sku
+              %td= product.price
 
     %h3 Images
-    - @gift.gift_images.each do |gift_image|
+    - if @gift.gift_images.none?
       %p
-        = image_tag gift_image.image_url(:small)
+        No images yet.
+        = link_to "Add some", gift_images_path(@gift)
+    - else      
+      - @gift.gift_images.each do |gift_image|
+        %p
+          = image_tag gift_image.image_url(:small)
