--- a/app/views/product_images/index.haml
+++ b/app/views/product_images/index.haml
@@ -43,6 +43,5 @@
   :javascript
     new App.Admin.ImageUploadForm($('[data-image-upload-form]')[0])
     new App.SortableList($('[data-sortable-list]')[0], {placeholder: 'col-sm-3'});
-    // turning this off because gift images aren't supported yet and we don't want them to look broken
-    //new App.Admin.ProductImageProcessingSubscription(#{@product.id})
+    new App.Admin.ProductImageProcessingSubscription(#{@product.id})
 
