--- a/app/assets/stylesheets/modules/admin/_admin.scss
+++ b/app/assets/stylesheets/modules/admin/_admin.scss
@@ -14,6 +14,9 @@
   margin-top: 24px;
   margin-bottom: 30px;
 }
+.admin__search {
+  margin-bottom: 24px;
+}
 .shadowed-box__01 {
   @include shadowed-box__01;
 }
