--- a/app/views/gift_products/index.haml
+++ b/app/views/gift_products/index.haml
@@ -38,13 +38,14 @@
 
   .col-sm-6
     %h3 Add Products to this Gift
-    %form.form-inline(method="GET")
-      .form-group
-        %input.form-control{type: 'search', name: 'q', value: params[:q], placeholder: 'Title or SKU', style: 'min-width: 300px;'}
-        %button.btn.btn-primary
-          %i.glyphicon.glyphicon-search
-          Search
-        = link_to 'Show All', gift_products_path(@gift), class: 'btn btn-default'
+    .admin__search
+      %form.form-inline(method="GET")
+        .form-group
+          %input.form-control{type: 'search', name: 'q', value: params[:q], placeholder: 'Title or SKU', style: 'min-width: 300px;'}
+          %button.btn.btn-primary
+            %i.glyphicon.glyphicon-search
+            Search
+          = link_to 'Show All', gift_products_path(@gift), class: 'btn btn-default'
 
     - if @available_products.empty?
       %p(style="margin-top: 10px;")
