breadcrumbs, top nav highlighting

--- a/app/views/profile_traits/topics/edit.html.haml
+++ b/app/views/profile_traits/topics/edit.html.haml
@@ -1,10 +1,7 @@
 .row
   .col-sm-12
-    %h1 Edit Profile Trait Topics
+    %h1 Edit Profile Trait Topic
 
 .row
   .col-sm-8
     = render 'form'
-
-    .links__view-back
-      = link_to 'Back', profile_traits_topics_path
