--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -12,7 +12,8 @@
         %li.divider-vertical
         %li{class: ("active" if active_top_nav_section == 'profile_traits')}= link_to "Profile Traits", profile_traits_topics_path
         %li{class: ("active" if active_top_nav_section == 'profile_sets')}= link_to "Response Sets", profile_sets_path
-        %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Training Sets", training_sets_path
+        %li{class: ("active" if active_top_nav_section == 'training_sets')}= link_to "Gift Training Sets", training_sets_path
+        %li{class: ("active" if active_top_nav_section == 'trait_training_sets')}= link_to "Profile Traits Training Sets", trait_training_sets_path
         %li.divider-vertical
         %li= link_to "Log Out", private_access_session_path, method: :delete
         
