--- a/app/views/trait_training_sets/index.html.haml
+++ b/app/views/trait_training_sets/index.html.haml
@@ -4,7 +4,7 @@
 
 .row.admin__actions
   .col-sm-12
-    = link_to link_to 'Add a Profile Trait Training Set', new_trait_training_set_path, class: 'btn btn-primary'
+    = link_to 'Add a Profile Trait Training Set', new_trait_training_set_path, class: 'btn btn-primary'
 
 .row
   .col-sm-12
