--- a/app/views/trait_training_set_questions/index.haml
+++ b/app/views/trait_training_set_questions/index.haml
@@ -20,5 +20,5 @@
             %td= trait_training_set_question.question&.prompt
             %td= trait_training_set_question.facet&.name
             %td
-              = link_to 'Edit', edit_trait_training_set_question_path(@trait_training_set, trait_training_set_question), class: 'btn btn-default btn-xs'
+              = link_to 'Response Impacts', edit_trait_training_set_question_path(@trait_training_set, trait_training_set_question), class: 'btn btn-default btn-xs'
               = link_to 'Delete', trait_training_set_question_path(@trait_training_set, trait_training_set_question), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
