--- a/app/views/trait_training_sets/index.html.haml
+++ b/app/views/trait_training_sets/index.html.haml
@@ -21,6 +21,6 @@
             %td= trait_training_set.name
             %td= trait_training_set.survey.title
             %td
-              = link_to 'View', trait_training_set, class: 'btn btn-default btn-xs'
-              = link_to 'Edit', edit_trait_training_set_path(trait_training_set), class: 'btn btn-default btn-xs'
+              = link_to 'Details', edit_trait_training_set_path(trait_training_set), class: 'btn btn-default btn-xs'
+              = link_to 'Questions', trait_training_set_questions_path(trait_training_set), class: 'btn btn-default btn-xs'
               = link_to 'Delete', trait_training_set, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
