--- a/app/views/trait_training_set_response_impacts/_index.haml
+++ b/app/views/trait_training_set_response_impacts/_index.haml
@@ -1,7 +1,25 @@
 -# TODO dispatch to multiple choice or slider
-- @trait_training_set_question.question.options.each do |option|
-  %div
-  %h4= option.text
-  -# TODO provide selector from the facet
-  -# if the facet is the same as what's in the database, then show the value
-  -# if it's different then add a delete[hidden] for the old response impact and a new blank response impact
+- if facet
+  %h3 Response Impacts
+  %table.table
+    %thead
+      %tr
+        %th Question
+        %th Profile Trait Tag
+    %tbody
+      - @trait_training_set_question.question.options.each_with_index do |option, i|
+        %tr
+          %td= option.text
+          %td
+            %input{type: 'hidden', name: "trait_training_set_question[trait_response_impacts_attributes][#{i}][survey_question_option_id]", value: option.id}
+            %select{name: "trait_training_set_question[trait_response_impacts_attributes][#{i}][profile_traits_tag_id]"}
+              %option
+              - facet.tags.each do |tag|
+                %option{value: tag.id, selected: tag_selected_for_option?(tag, option) }= tag.name_with_position
+  
+  - if facet != @trait_training_set_question.facet
+    - @trait_training_set_question.trait_response_impacts.each_with_index do |impact, i|
+      -# generate an index that doesn't collide with the new selections above
+      - index = (i+1) * -1
+      %input{type: 'hidden', name: "trait_training_set_question[trait_response_impacts_attributes][#{index}][id]", value: impact.id}
+      %input{type: 'hidden', name: "trait_training_set_question[trait_response_impacts_attributes][#{index}][_destroy]", value: 1}
