edit position for tags

--- a/app/views/profile_traits/tags/_form.html.haml
+++ b/app/views/profile_traits/tags/_form.html.haml
@@ -3,6 +3,7 @@
 
   .form-inputs
     = f.input :name
+    = f.input :position, label: 'Scale (between -3 and 3)'
 
   .form-actions
     = f.button :submit
