styleguide ideas for match visualization

--- a/app/views/profile_traits/facets/_form.html.haml
+++ b/app/views/profile_traits/facets/_form.html.haml
@@ -2,7 +2,9 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :name
+    .row
+      .col-xs-4
+        = f.input :name
 
   .form-actions
     = f.button :submit
