--- a/app/views/trait_training_sets/index.html.haml
+++ b/app/views/trait_training_sets/index.html.haml
@@ -13,6 +13,7 @@
         %tr
           %th Name
           %th Survey
+          %th View Trait Matches
           %th
 
       %tbody
@@ -20,6 +21,11 @@
           %tr
             %td= trait_training_set.name
             %td= trait_training_set.survey.title
+            %td
+              %select
+                - trait_training_set.survey.profile_sets.each do |profile_set|
+                  %option
+                  %option= profile_set.name
             %td
               = link_to 'Details', edit_trait_training_set_path(trait_training_set), class: 'btn btn-default btn-xs'
               = link_to 'Questions', trait_training_set_questions_path(trait_training_set), class: 'btn btn-default btn-xs'
